--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         "tpyo/amazon-s3-php-class": "dev-master",
         "symfony/console": "2.5.*@dev"
     },
+    "require-dev": {
+        "phpunit/phpunit": "4.2.*@dev",
+        "mockery/mockery": "0.9.*@dev"
+    },
     "autoload": {
         "psr-4": {
             "Indatus\\Callbot\\": "src/"
