add getFileName method

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
             "Indatus\\Callbot\\": "src/"
         }
     },
+    "bin": [
+        "callbot"
+    ],
     "license": "MIT",
     "authors": [
         {
