--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php": ">=5.4",
         "twilio/sdk": "dev-master",
         "tpyo/amazon-s3-php-class": "dev-master",
-        "symfony/console": "2.5.*@dev"
+        "symfony/console": "2.5.*@dev",
+		"league/flysystem": "0.4.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*@dev",
