--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "twilio/sdk": "dev-master",
         "tpyo/amazon-s3-php-class": "dev-master",
         "symfony/console": "2.5.*@dev",
-		"league/flysystem": "0.4.*"
+		"league/flysystem": "0.4.*",
+		"aws/aws-sdk-php": "2.6.*@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*@dev",
