--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "indatus/callbot",
+    "name": "indatus/gopher",
     "description": "A CLI tool for automated testing of telecom dial-in apps.",
     "require": {
         "php": ">=5.4",
@@ -18,7 +18,7 @@
         }
     },
     "bin": [
-        "callbot"
+        "gopher"
     ],
     "license": "MIT",
     "authors": [
